- correctly align input checkbox and radio next to the label tag

--- a/webskins/znc-ation/pub/css/znc-ation.css
+++ b/webskins/znc-ation/pub/css/znc-ation.css
@@ -156,6 +156,7 @@ tr.evenrow td {
 	display: inline-block;
 	width: 150px;
 	margin-right: 50px;
+	padding: 5px;
 }
 
 .subsection .inputlabel {
@@ -179,6 +180,10 @@ input[type=radio]
     width: 10%;
     height: 16px;
     width: 16px;
+    padding: 0;
+    margin: 0;
+    position: relative;
+    vertical-align: bottom;
 }
 
 /* formelement focus */
